--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
     font-size: 20px;
 }
 #map{
-    height: 500px;
-    width: 70%;
-    margin: auto;
+    height: 600px;
+    width: 55%;
+    margin-left: 50px;
+    float: left;
 }
 
 #searchplace{
@@ -45,20 +46,41 @@ input{
     font-size: 14px;
     padding: 2px;
 }
-///////////////////////////
 .container{
-    height: 140px;
+    height: 47px;
     width: 100%;
-    background-color: antiquewhite;
+    margin-top: 15px;
 }
 .nav-link{
     
     font-size: 22px;
 }
-img{
+a img{
     margin-top:10px;
     }
 
 h2{
     text-align: center;
+}
+#maincontent {
+    padding-bottom: 170px;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 30px;
+}
+small {
+    font-size: 120%;
+}
+#key {
+    height: 60px;
+    width: 600px;
+    float: right;
+    margin: 30px;
+    padding-top: 20px;
+}
+#color {
+    background: linear-gradient(to right, #0000ff 0%, #00ffff 25%, #00ff00 50%, #ffff00 75%, #ff0000 100%);
+    margin-top: 30px;
+    height: 30px;
+    width: 600px;
 }
